Bug 109266 - EDITING: Record Changes feature does not record changes to letter case with Shift+F3, 'Cycle Case', 'tOGGLE cASE' shortcuts
Summary: EDITING: Record Changes feature does not record changes to letter case with S...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
: 122115 130028 (view as bug list)
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2017-07-22 09:27 UTC by Brian
Modified: 2021-03-23 13:52 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brian 2017-07-22 09:27:13 UTC
Description:
Using Shift+F3 or the corresponding toolbar shortcuts changes the letter case correctly, however these changes are not properly recognized as changes made by the user and recorded. If a word has been changed from lower to uppercase manually, the original letters are struck out and the new ones added and underlined. If the upper and lowercase letter are selected and UPPERCASED with the shortcut function, all the lowercase struck-out letters will be uppercased.

Steps to Reproduce:
Example 1
1. Type "sample" into a new document.
2. Activate 'Record Changes'.
3. Select 'm'.
4. Format > Text > UPPERCASE.

Example 2
1. Type "sample" into a new document.
2. Activate 'Record Changes'.
3. Select 'm'.
4. Type 'M'.
5. Select "SamMple".
5. Format > Text > UPPERCASE.

Actual Results:  
Example 1
"saMple"
But without the colored/struck-out lowercase m and uppercase M is not colored/underlined.

Example 2
"SAMMPLE"
What should be 'm' and the following 'M' still have the correct decoration indicating the recorded changes but the first 'm' is now uppercase. The rest of the letters do not have the proper decoration. Rejecting the change results in "SAMPLE".


Expected Results:
Example 1
"samMple" (m colored and struck-out, M colored and underlined)

Example 2
"samMple" (m colored and struck-out, M colored and underlined)
then
"sampleSAMPLE" ("sample" colored and struck-out, "SAMPLE" colored and underlined)



Reproducible: Always

User Profile Reset: No
It also happens on a different computer.

Additional Info:
The same inconsistent behavior happens with text tables and in Calc spreadsheets cells. The changes act the same through undo/redo cycles. The info box that pops up when hovering over a changed spreadsheet cell also shows the same incorrect information. This behavior changes depending weather I select the cell and change the case or double click then select just the text and change the case.

It looks like the program doesn't consider changes made by the Change Case functions to be done by the user, so they are not recorded when they should be. May be related to Bug 106380.

Also exists in and old copy of OpenOffice 4.1.2


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:54.0) Gecko/20100101 Firefox/54.0
Comment 1 Buovjaga 2017-08-11 18:39:22 UTC
Repro.

Inherited per:

(In reply to Brian from comment #0)
> Also exists in and old copy of OpenOffice 4.1.2

Arch Linux 64-bit, KDE Plasma 5
Version: 6.0.0.0.alpha0+
Build ID: db17a874af37350b3270932175854ee674447bc1
CPU threads: 8; OS: Linux 4.12; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on August 11th 2017
Comment 2 QA Administrators 2018-08-12 02:35:17 UTC Comment hidden (obsolete)
Comment 3 Brian 2018-10-24 16:25:23 UTC
Still present in Version: 6.1.0.3 (x64)
Build ID: efb621ed25068d70781dc026f7e9c5187a4decd1

Additional thought:
The Auto Correct behavior should also be checked for it's interaction. It would make sense to me for any automatic changes to be considered as changes made by the user.
Comment 4 Gabor Kelemen (Collabora) 2019-05-29 13:37:06 UTC
*** Bug 122115 has been marked as a duplicate of this bug. ***
Comment 5 NISZ LibreOffice Team 2020-04-06 14:22:49 UTC
*** Bug 130028 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2020-11-05 16:07:39 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d3c77e9b10f20091ef338e262ba7756eb280ce9

tdf#109266 sw change tracking: track transliteration

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 NISZ LibreOffice Team 2020-12-03 13:07:51 UTC
Verified in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 761a672d62df1891b9f4f367a499b220ab2b33fa
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded