tdf#109266 sw change tracking: track transliteration

Format->Text->UPPERCASE, tOGGLE cASE etc. weren't
supported by change tracking.

Change-Id: Ic2c94375522a5469056837ab23fdbb9557212b53
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105345
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>